ui: simplify navbar divs, fixes wrapping on narrow displays iframe: use relative pos to help with wrapping

--- a/webrecorder/static/stylesheets/styles.css
+++ b/webrecorder/static/stylesheets/styles.css
@@ -42,6 +42,10 @@
     color: #74B9F3;
 }
 
+.navbar-user-links {
+    margin-right: 0px;
+}
+
 .navbar-user-links>ul>li>a {
     display: inline;
     font-size: 1.0em;
